--- a/index.html
+++ b/index.html
@@ -86,32 +86,83 @@
 
                        </div> 
                        <div class="home__img">
-                            <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <mask id="mask0" mask-type="alpha">
-                                    <path fill="#FF0066" d="M41.6,-32.6C56.6,-14.4,73.3,3.1,69.6,14.4C65.8,25.8,41.7,31.1,23.6,34C5.6,36.9,-6.4,37.5,-23.4,34.6C-40.4,31.8,-62.6,25.6,-61.3,17.8C-59.9,10.1,-35.2,0.9,-21.1,-17.1C-7,-35,-3.5,-61.7,4.9,-65.6C13.3,-69.6,26.6,-50.7,41.6,-32.6Z" transform="translate(100 100)" />
+                        <svg class="home__blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                            <mask id="mask0" mask-type="alpha">
+                                    <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547 
+                                    130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775 
+                                    97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666 
+                                    0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
                                 </mask>
                             <g mask="url(#mask0)">
-                                <path fill="#FF0066" d="M41.6,-32.6C56.6,-14.4,73.3,3.1,69.6,14.4C65.8,25.8,41.7,31.1,23.6,34C5.6,36.9,-6.4,37.5,-23.4,34.6C-40.4,31.8,-62.6,25.6,-61.3,17.8C-59.9,10.1,-35.2,0.9,-21.1,-17.1C-7,-35,-3.5,-61.7,4.9,-65.6C13.3,-69.6,26.6,-50.7,41.6,-32.6Z" transform="translate(100 100)" />
-                                <image class="home__blob-img" xlink:href="assets/img/profile.png"/>
+                                <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 
+                                165.547 130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 
+                                129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
+                                -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
+                                <image class="home__blob-img" x='12' y='18'xlink:href="assets/img/profile.png"/>
                             </g>
                         </svg>
                        </div>
                        <div class="home__data">
-
+                        <h1 class="home__title">Hello!<br/>I'm Bishal Roy</h1>
+                        <p class="home__description">Welcome to my web developer portfolio! I'm Bishal, a skilled and creative web developer with a passion for creating beautiful, responsive, and user-friendly websites. I've worked on a variety of web projects, ranging from personal blogs to e-commerce platforms.</p>
+                        <a href="#contact" class="button button--flex">
+                            Contact Me <i class="uil uil-message button__icon"></i>
+                        </a>
                        </div>
-
+                    </div>
+                    <div class="home__scroll">
+                        <a href="#about" class="home__scroll-button button--flex">
+                            <i class="uil uil-mouse-alt home__scroll-mouse"></i>
+                            <span class="home__scroll-name">Scroll Down</span>
+                            <i class="uil uil-arrow-down home__scroll-arrow"></i>
+                        </a>
                     </div>
                 </div>   
             </section>
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
+                <h2 class="section__title">About Me</h2>
+                <span class="section__subtitle">My Introduction</span>
+                <div class="about__container container grid">
+                    <img src="assets/img/about.png" alt="" class="about__img">
+                    <div class="about__data">
+                        <p class="about__description">I a technology enthusiast with a strong interest in web development and Software development. I am currently working on a project related to sign language recognition using machine learning. My technical expertise extends to Java, HTML, CSS, and JavaScript, and I have a particular focus on web development projects and Software development.</p>
+
+                        <p class="about__description">Recently, I have developed an Android application named 'Preyas' using Java and Android Studio. This application is designed to assist with defense exam preparation, showcasing my ability to create practical, user-focused software solutions.
+                        </p>
+
+                            <div class="about__buttons">
+                                <a download="" href="assets/pdf/Alexa-Cv.pdf" class="button button--flex">
+                                    Download Resume<i class="uil uil-download-alt button__icon"></i>
+                                </a>
+                            </div>
+
+
+                    </div>
+                </div>
                 
             </section>
 
             <!--==================== SKILLS ====================-->
             <section class="skills section" id="skills">
+                <h2 class="section__title">Skills</h2>
+                <span class="section__subtitle">My Technical Skills</span>
+                <div class="skills__container container grid">
+                    <div>
+                        <!--=========== SKILLS 1 =========-->
+                        <div class="skills__content">
+                            <div class="skills__header">
+                               <i class="uil uil-brackets-curly skills__icon"></i>
+                               <div>
+                                <h1 class="skills__title"></h1>
 
+                               </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+               
             </section>
 
             <!--==================== QUALIFICATION ====================-->
